--- a/dog_select.html
+++ b/dog_select.html
@@ -2,8 +2,12 @@
 <html lang="ja">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0">
 <title>Select Your Dog</title>
+
+<!-- ★ 横画面固定のCSSを追加 -->
+<link rel="stylesheet" href="orientation.css">
+
 <style>
   body {
     margin: 0;
@@ -15,51 +19,48 @@
     align-items: center;
   }
   h1 {
-    text-align: center;
     margin-top: 20px;
   }
   .dog-grid {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
     gap: 10px;
     margin-top: 20px;
+    justify-content: center;
   }
   .dog-grid img {
     width: 80px;
     height: 80px;
     object-fit: cover;
-    border: 2px solid transparent;
     border-radius: 8px;
+    border: 2px solid transparent;
     cursor: pointer;
-    transition: border 0.2s;
   }
   .dog-grid img.selected {
-    border: 3px solid red;
+    border-color: red;
   }
   .name-next {
     margin-top: 20px;
     display: flex;
     gap: 10px;
-    align-items: center;
   }
-  input[type="text"] {
-    padding: 5px;
+  input {
     font-size: 16px;
+    padding: 5px;
   }
   button {
-    padding: 5px 10px;
     font-size: 16px;
-    cursor: pointer;
+    padding: 5px 10px;
   }
 </style>
 </head>
 <body>
+
+<div id="rotateWarning">スマホを横向きにしてください</div>
+
 <h1>Select Your Dog</h1>
 
-<div class="dog-grid" id="dogGrid">
-  <!-- 画像をJSで挿入 -->
-</div>
+<div class="dog-grid" id="dogGrid"></div>
 
 <div class="name-next">
   <input type="text" id="dogName" placeholder="Enter Name">
@@ -68,45 +69,38 @@
 
 <script>
 const dogGrid = document.getElementById('dogGrid');
-const nextBtn = document.getElementById('nextBtn');
 let selectedDog = null;
 
-// 配列でdog画像を行ごとに分ける
 const dogs = [
   ["dog1.png","dog2.png","dog3.png","dog4.png"],
   ["dog5.png","dog6.png","dog7.png","dog8.png"],
   ["dog9.png","dog10.png","dog11.png"]
 ];
 
-// 表示
 dogs.forEach(row => {
-  row.forEach(dog => {
-    const img = document.createElement('img');
-    img.src = `dogs/${dog}`;
-    img.addEventListener('click', () => {
-      document.querySelectorAll('.dog-grid img').forEach(i => i.classList.remove('selected'));
-      img.classList.add('selected');
-      selectedDog = dog;
-    });
+  row.forEach(d => {
+    const img = document.createElement("img");
+    img.src = "dogs/" + d;
+    img.onclick = () => {
+      document.querySelectorAll('.dog-grid img').forEach(i => i.classList.remove("selected"));
+      img.classList.add("selected");
+      selectedDog = d;
+    };
     dogGrid.appendChild(img);
   });
 });
 
-nextBtn.addEventListener('click', () => {
-  const name = document.getElementById('dogName').value.trim();
-  if(!selectedDog) {
-    alert("犬を選んでください");
-    return;
-  }
-  if(!name) {
-    alert("名前を入力してください");
-    return;
-  }
-  // 選択データをlocalStorageに保存して確認画面に遷移
+document.getElementById("nextBtn").onclick = () => {
+  const name = document.getElementById("dogName").value.trim();
+  if (!selectedDog) return alert("犬を選んでください");
+  if (!name) return alert("名前を入力してください");
+
   localStorage.setItem("selectedDog", selectedDog);
   localStorage.setItem("dogName", name);
+
   window.location.href = "dog_confirm.html";
-});
+};
 </script>
+
 </body>
 </html>
