--- a/dog_confirm.html
+++ b/dog_confirm.html
@@ -2,79 +2,68 @@
 <html lang="ja">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0">
 <title>Confirm Your Dog</title>
+
+<!-- ★ 横画面固定のCSS -->
+<link rel="stylesheet" href="orientation.css">
+
 <style>
   body {
     margin: 0;
-    padding: 0;
-    font-family: sans-serif;
     background: #f0f0f0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    text-align: center;
   }
   h1 {
-    text-align: center;
     margin-top: 20px;
+    font-family: sans-serif;
   }
-  .dog-preview {
-    margin-top: 20px;
-  }
-  .dog-preview img {
-    width: 200px; /* スマホ横画面向けに適度なサイズ */
+  img {
+    width: 200px;
     height: 200px;
     object-fit: cover;
-    border-radius: 8px;
-  }
-  .buttons {
     margin-top: 20px;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
+    border-radius: 10px;
   }
   button {
-    padding: 10px 20px;
     font-size: 18px;
-    cursor: pointer;
+    padding: 10px 20px;
+    margin: 10px;
   }
 </style>
 </head>
 <body>
+
+<div id="rotateWarning">スマホを横向きにしてください</div>
+
 <h1>Confirm Your Dog</h1>
 
-<div class="dog-preview">
-  <img id="dogImage" src="" alt="Selected Dog">
-  <p id="dogName" style="text-align:center;font-size:18px;margin-top:10px;"></p>
-</div>
+<img id="dogImage">
+<p id="dogName"></p>
 
-<div class="buttons">
-  <button id="backBtn">Back</button>
-  <button id="startBtn">Game Start</button>
-</div>
+<button id="backBtn">Back</button>
+<button id="startBtn">Game Start</button>
 
 <script>
-const dogImage = document.getElementById('dogImage');
-const dogNameText = document.getElementById('dogName');
+const img = document.getElementById("dogImage");
+const nameBox = document.getElementById("dogName");
 
-const selectedDog = localStorage.getItem("selectedDog");
-const dogName = localStorage.getItem("dogName");
+const dog = localStorage.getItem("selectedDog");
+const name = localStorage.getItem("dogName");
 
-if(!selectedDog || !dogName){
-  // データがなければ選択画面に戻す
-  window.location.href = "dog_select.html";
-} else {
-  dogImage.src = `dogs/${selectedDog}`;
-  dogNameText.textContent = dogName;
-}
+if (!dog) location.href = "dog_select.html";
 
-document.getElementById('backBtn').addEventListener('click', () => {
-  window.location.href = "dog_select.html";
-});
+img.src = "dogs/" + dog;
+nameBox.textContent = name;
 
-document.getElementById('startBtn').addEventListener('click', () => {
-  window.location.href = "race.html";
-});
+document.getElementById("backBtn").onclick = () => {
+  location.href = "dog_select.html";
+};
+
+document.getElementById("startBtn").onclick = () => {
+  location.href = "race.html";
+};
 </script>
+
 </body>
 </html>
