--- a/race.html
+++ b/race.html
@@ -1,30 +1,42 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0">
-<title>Dog Race</title>
+  <meta charset="UTF-8">
+  <title>Dog Race</title>
+  <link rel="stylesheet" href="race.css">
+  <link rel="stylesheet" href="orientation.css">
 
-<link rel="stylesheet" href="race.css">
-<link rel="stylesheet" href="orientation.css"> <!-- ★ 追加 -->
-
+  <!-- iPhone 100vh バグ修正 -->
+  <script>
+    function fixHeight() {
+      document.documentElement.style.setProperty("--real-vh", window.innerHeight * 0.01 + "px");
+    }
+    window.addEventListener("resize", fixHeight);
+    fixHeight();
+  </script>
 </head>
+
 <body>
 
-<div id="rotateWarning">スマホを横向きにしてください</div>
-
 <div id="raceContainer">
-  
+  <!-- トラック -->
   <img id="track" src="track/track_background.png">
+  
+  <!-- 犬 -->
   <img id="dog" src="">
 
+  <!-- グレーオーバーレイ（Tap to Start）-->
   <div id="overlay">
     <div id="tapText">Tap to Start</div>
   </div>
 
+  <!-- カウントダウン -->
   <div id="countdown">3</div>
+
+  <!-- タイマー -->
   <div id="timer">0.00 s</div>
 
+  <!-- TAPボタン -->
   <button id="tapButton">TAP</button>
 </div>
 
