--- a/race.html
+++ b/race.html
@@ -1,26 +1,36 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
 <head>
   <meta charset="UTF-8">
+  <!-- スマホ横画面で全画面＆ダブルタップ拡大をほぼ防ぐ -->
+  <meta name="viewport"
+        content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>Dog Race</title>
   <link rel="stylesheet" href="race.css">
 </head>
 <body>
 
 <div id="raceContainer">
+  <!-- 背景トラック（横長のコース画像） -->
   <img id="track" src="track/track_background.png">
+  <!-- 犬 -->
   <img id="dog" src="">
 
+  <!-- グレーオーバーレイ + Tap to Start -->
   <div id="overlay">
     <div id="tapText">Tap to Start</div>
   </div>
 
+  <!-- カウントダウン -->
   <div id="countdown">3</div>
+
+  <!-- タイマー -->
   <div id="timer">0.00 s</div>
+
+  <!-- タップ連打ボタン -->
   <button id="tapButton">TAP</button>
 </div>
 
 <script src="race.js"></script>
-
 </body>
 </html>
