--- a/race.html
+++ b/race.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html>
 <head>
   <meta charset="UTF-8">
-  <!-- スマホ横画面で全画面＆ダブルタップ拡大をほぼ防ぐ -->
-  <meta name="viewport"
-        content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>Dog Race</title>
   <link rel="stylesheet" href="race.css">
 </head>
 <body>
 
 <div id="raceContainer">
-  <!-- 背景トラック（横長のコース画像） -->
+
+  <!-- トラック -->
   <img id="track" src="track/track_background.png">
+
   <!-- 犬 -->
   <img id="dog" src="">
 
-  <!-- グレーオーバーレイ + Tap to Start -->
+  <!-- グレーオーバーレイ -->
   <div id="overlay">
     <div id="tapText">Tap to Start</div>
   </div>
@@ -27,8 +26,12 @@
   <!-- タイマー -->
   <div id="timer">0.00 s</div>
 
-  <!-- タップ連打ボタン -->
+  <!-- TAPボタン -->
   <button id="tapButton">TAP</button>
+
+  <!-- Restartボタン -->
+  <button id="restartButton" style="display:none;">Restart</button>
+
 </div>
 
 <script src="race.js"></script>
