--- a/race.html
+++ b/race.html
@@ -8,30 +8,18 @@
 <body>
 
 <div id="raceContainer">
-
-  <!-- トラック -->
   <img id="track" src="track/track_background.png">
-
-  <!-- 犬 -->
   <img id="dog" src="">
 
-  <!-- グレーオーバーレイ -->
   <div id="overlay">
     <div id="tapText">Tap to Start</div>
   </div>
 
-  <!-- カウントダウン -->
   <div id="countdown">3</div>
-
-  <!-- タイマー -->
   <div id="timer">0.00 s</div>
 
-  <!-- TAPボタン -->
   <button id="tapButton">TAP</button>
-
-  <!-- Restartボタン -->
-  <button id="restartButton" style="display:none;">Restart</button>
-
+  <button id="restartButton">RESTART</button>
 </div>
 
 <script src="race.js"></script>
